--- a/taxi/manifest.yaml
+++ b/taxi/manifest.yaml
@@ -1,16 +1,20 @@
 aspect_ratio: '16:9'
-canvas_main: ''
-cover_art: ''
-deploy_files: []
-deployed: Never
+canvas_main: gameoflife.canvas.js
+cover_art: cover_art.png
+deploy_files:
+- gameoflife.plugin.tzjs
+- gameoflife.canvas.js
+- mapping_table.json
+- js/*
+deployed: 11:02 | 24/11/2012
 engine_version: 0.23.1
 flash_main: ''
 is_multiplayer: false
 is_temp: false
-mapping_table: ''
-modified: 18:06 | 13/11/2012
-path: H:\github\turbulenz\taxi
-plugin_main: ''
-slug: taxi
-title: Taxi
+mapping_table: mapping_table.json
+modified: 22:23 | 22/11/2012
+path: H:\github\turbulenz\gameoflife
+plugin_main: gameoflife.plugin.tzjs
+slug: game-of-life
+title: Game Of Life
 title_logo: ''
